testsuite/tests/rename/should_fail/T2993.hs
{-# LANGUAGE TypeOperators #-}

-- #2993

module T2993 where

foo b a = a <**> b . b

