testsuite/tests/rename/should_fail/T2993.stderr

T2993.hs:7:13: error:
    Variable not in scope: (<**>) :: t0 -> (b0 -> b0) -> t1
    Perhaps you meant ‘<*>’ (imported from Prelude)
